--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,17 @@
 [phases.setup]
-aptPkgs = ["python3", "gcc"]
+aptPkgs = ["python3", "python3-venv", "gcc"]
 
 [phases.build]
 cmds = [
-  "python -m venv --copies /opt/venv",
-  ". /opt/venv/bin/activate",
-  "pip install -r requirements.txt"
+    "python3 -m venv /opt/venv",              # 가상환경 생성
+    ". /opt/venv/bin/activate",                # 가상환경 활성화
+    "pip install --upgrade pip",               # pip 최신화
+    "pip install -r requirements.txt"          # 패키지 설치
 ]
 
-[phases.start]
-cmds = ["python manage.py runserver 0.0.0.0:8000"]
+[start]
+cmds = [
+    ". /opt/venv/bin/activate",                # 가상환경 활성화
+    "python manage.py migrate",                # 마이그레이션
+    "python manage.py runserver 0.0.0.0:8000"  # 서버 실행
+]
