--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SECRET_KEY="WERWERWERWERWER"
-SQLALCHEMY_DATABASE_URI="postgresql://postgres:postgres@localhost:5432/videosurvey"
+#SQLALCHEMY_DATABASE_URI="postgresql://postgres:postgres@localhost:5432/videosurvey"
+DATABASE_URL="postgresql://postgres:JLcmqLGjYXrTzqzwjCDpEPDGUuVLmCER@roundhouse.proxy.rlwy.net:46808/railway"
